posiGen_FullsendBox/src/objects/Commitment__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commitment_Amount__c</fullName>
        <label>Commitment Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment_Broken__c</fullName>
        <formula>Payment_Received__c &lt;&gt; TRUE &amp;&amp; Committed_Date__c &lt; Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commitment Broken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commitment_Kept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commitment Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commitment_Made_On_Date__c</fullName>
        <description>Date when the customer made the commitment</description>
        <inlineHelpText>Date when the customer made the commitment</inlineHelpText>
        <label>Commitment Made On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Status__c</fullName>
        <label>Commitment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Kept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Committed_Date__c</fullName>
        <description>Date that the customer committed to make payment</description>
        <inlineHelpText>Date that the customer committed to make payment</inlineHelpText>
        <label>Committed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>LD_Lease__r.Lease_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LD Lease</label>
        <referenceTo>LD_Lease__c</referenceTo>
        <relationshipLabel>Commitments</relationshipLabel>
        <relationshipName>Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the committed payment was received</description>
        <inlineHelpText>Whether or not the committed payment was received</inlineHelpText>
        <label>Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Commitment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Committed_Date__c</columns>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>LD_Lease__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Broken_Commitments</fullName>
        <columns>NAME</columns>
        <columns>Commitment_Made_On_Date__c</columns>
        <columns>Committed_Date__c</columns>
        <columns>Commitment_Amount__c</columns>
        <columns>LD_Lease__c</columns>
        <columns>Payment_Received__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commitment_Kept__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Committed_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Broken Commitments</label>
        <sharedTo>
            <role>Billing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commitment_Kept</fullName>
        <columns>NAME</columns>
        <columns>Commitment_Made_On_Date__c</columns>
        <columns>Committed_Date__c</columns>
        <columns>Commitment_Amount__c</columns>
        <columns>LD_Lease__c</columns>
        <columns>Payment_Received__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commitment_Kept__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Commitment Kept</label>
        <sharedTo>
            <role>Billing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Commitments</fullName>
        <columns>NAME</columns>
        <columns>Commitment_Made_On_Date__c</columns>
        <columns>Committed_Date__c</columns>
        <columns>Commitment_Amount__c</columns>
        <columns>LD_Lease__c</columns>
        <columns>Payment_Received__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Committed_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Payment_Received__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending Commitments</label>
        <sharedTo>
            <role>Billing</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Payment Commitment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>